<resources>
    <string name="app_name">FifApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or partner</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_settings">Settings</string>
    <string name="create_act" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_title" />
    <string name="default_notification_channel_id" />
    <string name="vous_connecter">Vous connecter</string>
    <string name="bienvenu_que_d_sirez_vous">Bienvenu, que désirez vous ?</string>
    <string name="une_commande">Une commande</string>
    <string name="une_reservation">Une réservation</string>
    <string name="creer_un_compte">Créer un compte</string>
    <string name="integrer_le_reseau">Intégrer le réseau</string>
    <string name="chercher_un_partenaire">Chercher un partenaire</string>
    <string name="next_activity">Next activity</string>
    <string name="total_commande">Total commande:</string>
    <string name="validez_reservation">Validez reservation</string>
    <string name="dialog_message">dial_msg</string>
    <string name="dialog_title">dial_title</string>
    <string name="protection_des_donn_es">Protection des données</string>
    <string name="site_internet_du_restaurant">Site Internet du Restaurant</string>
</resources>
